Fixed orpghaned closing divs, fixed bottom section button alignments

--- a/codeup-design.css
+++ b/codeup-design.css
@@ -183,8 +183,11 @@ p{
 .hr_sm{
     color: black;
     background-color: black;
-    border-bottom:2px solid lightgrey;
-    width: 75%;
+    border-bottom:2px solid lightgray;
+    width: 70%;
+    margin:0 auto;
+    margin-bottom: 3%;
+    margin-top: 2%;
 
 }
 
@@ -242,4 +245,3 @@ p{
 .margin-right_sm {
     margin-right: 10px;
 }
-
